--- a/contact.html
+++ b/contact.html
@@ -2,63 +2,77 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Contact</title>
-	<link href="./assets/css/reset.css" type="text/css" rel="stylesheet">
-	<link href="./assets/css/style.css" type="text/css" rel="stylesheet">
+	<title>Contact Me</title>
+	<link href="assets/css/reset.css" type="text/css" rel="stylesheet">
+	<link href="assets/css/style.css" type="text/css" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
 
-	<!-- Navigation Bar -->
-	<header>
-		<div class="nav">
-				<a href="contact.html">Contact </a>
-		</div>
-		<div class="nav">
+<div id="master container">
+<!-- Navigation Bar -->
+	<header id="masthead">
+		<div class="container">
+		<a href="index.html" id="logo">Matthew Nagy</a>
+		<nav>
+			<a href="contact.html">Contact </a>
 			<a href="portfolio.html">Portfolio </a>
+			<a href="index.html">About </a>
+		</nav>	
 		</div>
-		<div class="nav">
-			<a href="index.html">About </a> 
-		</div>
-		<div id="name">Matthew Nagy</div>
 	</header>
 
-			
-	<!-- Main Page Content -->
-	<div class="content">	
-
-		<div id="Contact">
+<!-- Main Page Content -->
+	<div id="main-container" class="container">
+		<section class="main-section">
 			<h1>Contact</h1>
-		</div>
 
-		<form>
-			Name: <br>
-			<textarea rows="1" cols="100" name="Name" form="name"></textarea><br>
-			Email: <br>
-			<textarea rows="1" cols="100" name="Email" form="email"></textarea><br>
-			Message <br>
-			<textarea rows="5" cols="100" name="Message" form="message"></textarea><br>
-			<input type="submit" name="Submit">
+		<form id="contact-form">
+			<ul>
+				<li>
+					<label for="name">Name</label>
+					<input type="text" name="name" id="name"
+					placeholder="John Smith" required="required">
+				</li>
+
+				<li>
+					<label for="email">email</label>
+					<input type="text" name="email" id="email"
+					placeholder="exaple@gmail.com" required="required">
+				</li>
+
+				<li>
+					<label for="message">Message</label>
+					<textarea id="textarea" name="message" 
+					required="required"></textarea>
+				</li>
+			</ul>
+			<input type="submit" name="submit">
 		</form>
-		
+	</section>
+
+	<!-- Social Media Box -->
+		<section class="sidebar">
+			<div id="connect">
+				<h2>Connect with Me</h2>
+
+				<a href="https://github.com/grndprxguy" target="_blank">
+				<img src="assets/images/github.png" class="social" alt="GitHub"/></a>
+				<a href="https://www.linkedin.com/in/matthew-nagy-748000141/" target="_blank">
+				<img src="assets/images/linkedin.png" class="social" alt="linkedin"></a>
+				<a href="https://stackoverflow.com/users/8446113/matthew-nagy" target="_blank">
+				<img src="assets/images/stackoverflow.png" class="social" alt="StackOverflow"></a>
+			</div>
+		</section>
 	</div>
 
-<!-- Social Media Box -->
-	<div id="social_links">
-		<h1>Connect with Me</h1>
-		<a href="https://github.com/grndprxguy" target="_blank">
-		<img src="assets/images/github.png" alt="GitHub" style="width:60px;height:60px;"/></a>
-		<a href="https://www.linkedin.com/in/matthew-nagy-748000141/" target="_blank">
-		<img src="assets/images/linkedin.png" alt="linkedin" style="width:60px;height:60px;"/></a>
-		<a href="https://stackoverflow.com/users/8446113/matthew-nagy" target="_blank">
-		<img src="assets/images/stackoverflow.png" alt="StackOverflow" style="width:60px;height:60px;"/></a>
-	</div>
 
-
-	<footer id="copyright">
+	<footer>
+		<div class="container">
 		&copy Copyright 2017 Matthew Nagy
-	</footer>
 	</div>
+	</footer>
 
 
 </body>
