--- a/portfolio.html
+++ b/portfolio.html
@@ -3,67 +3,78 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Portfolio</title>
-	<link href="./assets/css/reset.css" type="text/css" rel="stylesheet">
-	<link href="./assets/css/style.css" type="text/css" rel="stylesheet">
+	<link href="assets/css/reset.css" type="text/css" rel="stylesheet">
+	<link href="assets/css/style.css" type="text/css" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-<!-- Navigation Bar -->
-	<header>
-		<div class="nav">
-			<a href="contact.html">Contact </a>
-		</div>
-		<div class="nav">
-			<a href="portfolio.html">Portfolio </a>
-		</div>
-		<div class="nav">
-			<a href="index.html">About </a> 
-		</div>
 
-	<div id="name">Matthew Nagy</div>
+<div id="master container">
+<!-- Navigation Bar -->
+	<header id="masthead">
+		<div class="container">
+		<a href="index.html" id="logo">Matthew Nagy</a>
+		<nav>
+			<a href="contact.html">Contact </a>
+			<a href="portfolio.html">Portfolio </a>
+			<a href="index.html">About </a>
+		</nav>	
+		</div>
 	</header>
-	
 
 <!-- Main Page Content -->
-	<div class="content2">	
+	<div id="main-container" class="container">
+		<section class="main-section">
 		
 		<h1>Portfolio</h1>
-		
-	<!-- Gallery Images -->
-		<div class="clearfix">
-			<div class="gallery">
-				<img src="assets/images/image1.jpeg" alt="Image 1">
-				<div class="desc">Image 1</div>
+			<div class="work">
+				<img src="assets/images/image1.jpeg" class="auth-image" alt="Image 1">
+				<h3>Image 1</h3>
 			</div>
-			<div class="gallery">
-				<img src="assets/images/image2.jpeg" alt="Image 2">
-				<div class="desc">Image 2</div>
+
+			<div class="work">
+				<img src="assets/images/image2.jpeg" class="auth-image" alt="Image 2">
+				<h3>Image 2</h3>
 			</div>
-			<div class="gallery">
-				<img src="assets/images/image3.jpeg" alt="Image 3">
-				<div class="desc">Image 3</div>
+
+			<div class="work">
+				<img src="assets/images/image3.jpeg" class="auth-image" alt="Image 3">
+				<h3>Image 3</h3>
 			</div>
-			<div class="gallery">
-				<img src="assets/images/image4.jpeg" alt="Image 4">
-				<div class="desc">Image 4</div>	
+
+			<div class="work">
+				<img src="assets/images/image4.jpeg" class="auth-image" alt="Image 4">
+				<h3>Image 4</h3>
 			</div>
-			<div class="gallery">
-				<img src="assets/images/image5.jpeg" alt="Image 5">
-				<div class="desc">Image 5</div>	
+
+			<div class="work">
+				<img src="assets/images/image5.jpeg" class="auth-image" alt="Image 5">
+				<h3>Image 5</h3>
 			</div>
-		</div>
+		</section>
+	
+
+	<!-- Social Media Box -->
+		<section class="sidebar">
+			<div id="connect">
+				<h2>Connect with Me</h2>
+
+				<a href="https://github.com/grndprxguy" target="_blank">
+				<img src="assets/images/github.png" class="social" alt="GitHub"/></a>
+				<a href="https://www.linkedin.com/in/matthew-nagy-748000141/" target="_blank">
+				<img src="assets/images/linkedin.png" class="social" alt="linkedin"></a>
+				<a href="https://stackoverflow.com/users/8446113/matthew-nagy" target="_blank">
+				<img src="assets/images/stackoverflow.png" class="social" alt="StackOverflow"></a>
+			</div>
+		</section>
 	</div>
 
-<!-- Social Media Box -->
-	<div id="social_links">
-		<h1>Connect with Me</h1>
-		<a href="https://github.com/grndprxguy" target="_blank">
-		<img src="assets/images/github.png" alt="GitHub" style="width:60px;height:60px;"></a>
-		<a href="https://www.linkedin.com/in/matthew-nagy-748000141/" target="_blank">
-		<img src="assets/images/linkedin.png" alt="linkedin" style="width:60px;height:60px;"></a>
-		<a href="https://stackoverflow.com/users/8446113/matthew-nagy" target="_blank">
-		<img src="assets/images/stackoverflow.png" alt="StackOverflow" style="width:60px;height:60px;"></a>
+	<footer>
+		<div class="container">
+		&copy Copyright 2017 Matthew Nagy
 	</div>
-
+	</footer>
+</div>
 </body>
 </html>
